--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
       <header>
-        <h1>Titulo do site</h1>
+        <h1>curso</h1>
       </header>  
         <article>
-          <h2>artigo 001</h2>
-          <p>texto do artigo 001</p>
+          <h2>cursos</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque ex officiis soluta error cumque quae placeat deleniti atque illo adipisci id, repellat repellendus iusto maxime! Fuga aliquam vel repellendus dignissimos.</p>
         </article>
         <article>
-            <h2>artigo 002</h2>
-            <p>texto do artigo 002</p>
+            <h2>cursos de <html></html></h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, voluptatem illo? Obcaecati quae error id aspernatur non vitae quia? Explicabo nulla quod officia iusto harum, quas dignissimos quaerat soluta tempora!</p>
         </article>
     </main>    
 </body>
